force-app/main/default/objects/Product2/fields/AdditionalFeatureCoef__c.field-meta.xml
<CustomField>
    <fullName>AdditionalFeatureCoef__c</fullName>
    <label>Additional Feature Coef</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>