force-app/main/default/objects/Product2/fields/AmortizationAllowed__c.field-meta.xml
<CustomField>
    <fullName>AmortizationAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amortization Allowed</label>
    <type>Checkbox</type>
</CustomField>