force-app/main/default/objects/Product2/fields/BaseCategory__c.field-meta.xml
<CustomField>
    <fullName>BaseCategory__c</fullName>
    <label>Base Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BaseCategory</valueSetName>
    </valueSet>
</CustomField>