force-app/main/default/objects/Product2/fields/CustomerToolProperty__c.field-meta.xml
<CustomField>
    <fullName>CustomerToolProperty__c</fullName>
    <label>Customer Tool Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARaymond</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>