force-app/main/default/objects/Product2/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <label>Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>CLIP</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>QC</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>