force-app/main/default/objects/Product2/fields/ExtremeCoef__c.field-meta.xml
<CustomField>
    <fullName>ExtremeCoef__c</fullName>
    <label>Extreme Coef</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>