force-app/main/default/objects/Product2/fields/FinishColor__c.field-meta.xml
<CustomField>
    <fullName>FinishColor__c</fullName>
    <label>Finish / Color</label>
    <length>80</length>
    <type>Text</type>
</CustomField>