force-app/main/default/objects/Product2/fields/FunctionalFamilyLevel2__c.field-meta.xml
<CustomField>
    <fullName>FunctionalFamilyLevel2__c</fullName>
    <label>Functional Family Level 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FunctionalFamilyLevel2</valueSetName>
    </valueSet>
</CustomField>