force-app/main/default/objects/Product2/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <label>Image link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>