force-app/main/default/objects/Product2/fields/ImageProduct__c.field-meta.xml
<CustomField>
    <fullName>ImageProduct__c</fullName>
    <formula>&apos;AR&apos; + MID( ProductCode , 0, 6) + &apos;.png&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image Product</label>
    <type>Text</type>
</CustomField>