force-app/main/default/objects/Product2/fields/MaterialRevision__c.field-meta.xml
<CustomField>
    <fullName>MaterialRevision__c</fullName>
    <label>Material Revision</label>
    <length>80</length>
    <type>Text</type>
</CustomField>