force-app/main/default/objects/Product2/fields/NetWeight__c.field-meta.xml
<CustomField>
    <fullName>NetWeight__c</fullName>
    <label>Net Weight</label>
    <length>80</length>
    <type>Text</type>
</CustomField>