force-app/main/default/objects/Product2/fields/Optional__c.field-meta.xml
<CustomField>
    <fullName>Optional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optional</label>
    <type>Checkbox</type>
</CustomField>