force-app/main/default/objects/Product2/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>SAP</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Windchill</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>