force-app/main/default/objects/Product2/fields/ProductFamily1__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily1__c</fullName>
    <label>Product Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductFamily</valueSetName>
    </valueSet>
</CustomField>