force-app/main/default/objects/Product2/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <label>Product Hierarchy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>