force-app/main/default/objects/Product2/fields/ProductHierarchyDescription__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchyDescription__c</fullName>
    <label>Product Hierarchy Decription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>