force-app/main/default/objects/Product2/fields/Productimage__c.field-meta.xml
<CustomField>
    <fullName>Productimage__c</fullName>
    <formula>IMAGE(&apos;/resource/&apos; &amp; StaticRessource__c &amp; &quot;/&quot; &amp; ImageProduct__c, &quot; &quot; &amp; Image__c, 70, 66)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product image</label>
    <type>Text</type>
</CustomField>