force-app/main/default/objects/Product2/fields/ProjectClassification__c.field-meta.xml
<CustomField>
    <fullName>ProjectClassification__c</fullName>
    <label>Project Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProjectClassification</valueSetName>
    </valueSet>
</CustomField>