force-app/main/default/objects/Product2/fields/ProjectClassificationTech__c.field-meta.xml
<CustomField>
    <fullName>ProjectClassificationTech__c</fullName>
    <label>Project Classification Tech</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B4</fullName>
            </value>
            <value>
                <fullName>B1-3-5, C1, D5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>