force-app/main/default/objects/Product2/fields/QCApplication__c.field-meta.xml
<CustomField>
    <fullName>QCApplication__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QC Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>