force-app/main/default/objects/Product2/fields/QCPricingGroup__c.field-meta.xml
<CustomField>
    <fullName>QCPricingGroup__c</fullName>
    <label>QC Pricing Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QCPricingGroup</valueSetName>
    </valueSet>
</CustomField>