force-app/main/default/objects/Product2/fields/RawMaterial__c.field-meta.xml
<CustomField>
    <fullName>RawMaterial__c</fullName>
    <label>Raw Material</label>
    <length>80</length>
    <type>Text</type>
</CustomField>