force-app/main/default/objects/Product2/fields/Service_Layout__c.field-meta.xml
<CustomField>
    <fullName>Service_Layout__c</fullName>
    <label>Service Layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tooling / Serial Tooling</fullName>
            </value>
            <value>
                <fullName>Prototype Tooling</fullName>
            </value>
            <value>
                <fullName>Prototype Parts</fullName>
            </value>
            <value>
                <fullName>Validation</fullName>
            </value>
            <value>
                <fullName>PPAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>