force-app/main/default/objects/Product2/fields/TargetAmortizationField__c.field-meta.xml
<CustomField>
    <fullName>TargetAmortizationField__c</fullName>
    <label>Target Amortization Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dev Cost/validation per batch</fullName>
            </value>
            <value>
                <fullName>Tooling (Renewal or New) per batch</fullName>
            </value>
            <value>
                <fullName>Production Tooling per batch</fullName>
            </value>
            <value>
                <fullName>Assembly Tool/Fixture per batch</fullName>
            </value>
            <value>
                <fullName>Prototype Tooling per batch</fullName>
            </value>
            <value>
                <fullName>Engineering Costs (ED&amp;T?) per batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>