force-app/main/default/objects/Product2/fields/Treatment__c.field-meta.xml
<CustomField>
    <fullName>Treatment__c</fullName>
    <label>Treatment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>