force-app/main/default/objects/Product2/fields/WeightUnit__c.field-meta.xml
<CustomField>
    <fullName>WeightUnit__c</fullName>
    <label>Weight Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>