force-app/main/default/objects/Product2/listViews/All_Amortizable_Active_Services2.listView-meta.xml
<ListView>
    <fullName>All_Amortizable_Active_Services2</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>ProductFamily1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>AmortizationAllowed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BaseCategory__c</field>
        <operation>equals</operation>
        <value>MAT_ZDIE</value>
    </filters>
    <label>All Amortizable Active Services</label>
</ListView>