force-app/main/default/objects/Product2/listViews/All_Products_BGD.listView-meta.xml
<ListView>
    <fullName>All_Products_BGD</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>AmortizationAllowed__c</columns>
    <columns>TargetAmortizationField__c</columns>
    <columns>Service_Layout__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BaseCategory__c</field>
        <operation>equals</operation>
        <value>MAT_ZDIE</value>
    </filters>
    <label>All Services</label>
</ListView>