force-app/main/default/objects/Product2/listViews/GenericProducts.listView-meta.xml
<ListView>
    <fullName>GenericProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>BaseCategory__c</field>
        <operation>equals</operation>
        <value>MAT_ZCRM</value>
    </filters>
    <label>GenericProducts</label>
</ListView>